--- a/careers.html
+++ b/careers.html
@@ -65,19 +65,48 @@
 					<br/>
 				  <div id="server">
 					  <h3>Server</h3>
-						<p></p>
+						<p>Requirements:</p>
+						<ul>
+						  <li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+						</ul>
 					</div>
 					<div id="busser">
 					  <h3>Busser</h3>
+						<p>Requirements:</p>
+						<ul>
+						  <li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+						</ul>
 					</div>
 					<div id="dishwasher">
 					  <h3>Dishwasher</h3>
+						<p>Requirements:</p>
+						<ul>
+						  <li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+						</ul>
 					</div>
 					<div id="chef">
 					  <h3>Chef</h3>
+						<p>Requirements:</p>
+						<ul>
+						  <li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+						</ul>
 					</div>
 					<div id="manager">
 					  <h3>Manager</h3>
+						<p>Requirements:</p>
+						<ul>
+						  <li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+							<li>Lorem ipsum</li>
+						</ul>
 					</div>
 				</div>
 			</section>
