--- a/careers.html
+++ b/careers.html
@@ -26,7 +26,7 @@
 				<div class="container-fluid">
 				  <div class="navbar-header ml-3">
 					  <a class="navbar-left" id="home-button" href="index.html">
-							<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="80" style={{padding: "0px"}}/>
+							<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="80" style="padding: 0px"/>
 					  </a>
 					</div>
 					<ul class="nav navbar-nav">
@@ -116,7 +116,7 @@
 			<div class="row">
 				<div class="col-sm-3">
 					<a href="index.html">
-						<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="160px" style={{padding: "10px"}}/>
+						<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="160px" style="padding: 10px"/>
 					</a>
 				</div>
 				<div class="col-sm-6" style="text-align: center;">
