--- a/about.html
+++ b/about.html
@@ -55,6 +55,12 @@
 			</div>
 			</section>
 		</main>
+	  	<br/>
+	  	<aside>
+			<p style="text-align: center"><em>1(800) 555-1234</em></p>
+			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
+	        </aside>
+	  	<br/>
 		<footer id="footer" class="container-fluid">
 			<br/>
 			<div class="row">
