--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,14 @@
 				</div>
 			</nav>
 		</header>
-
+		<main >
+	        </main>
+	  	<br/>
+	  	<aside>
+			<p style="text-align: center"><em>1(800) 555-1234</em></p>
+			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
+	        </aside>
+	  	<br/>
 		<footer id="footer" class="container-fluid">
 			<br/>
 			<div class="row">
