--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,7 @@
 						<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="160px" style="padding: 10px"/>
 					</a>
 				</div>
-				<div class="col-sm-6" style={{textAlign: "center"}}>
+				<div class="col-sm-6" style="text-align: center">
 					<p style={{marginTop: "50px"}}>
 						<a href="about.html" class="link"> About</a> | 
 						<a href="menu.html" class="link"> Menu</a> | 
@@ -68,7 +68,7 @@
 					</p>
 				</div>
 				<div class="col-sm-3">
-					<p style={{marginTop: "50px"}}>For Educational Purposes Only</p>
+					<p style="margin-top: 50px">For Educational Purposes Only</p>
 				</div>
 			</div>
 		</footer>
