--- a/menu.html
+++ b/menu.html
@@ -58,7 +58,7 @@
 					</a>
 				</div>
 				<div class="col-sm-6" style="text-align: center">
-					<p style={{marginTop: "50px"}}>
+					<p style="margin-top: 50px">
 						<a href="about.html" class="link"> About</a> | 
 						<a href="menu.html" class="link"> Menu</a> | 
 						<a href="catering.html" class="link"> Catering</a> | 
