Add stuff to careers

--- a/careers.html
+++ b/careers.html
@@ -66,6 +66,7 @@
 								dishwasher = document.getElementById("dishwasher"),
 								chef = document.getElementById("chef"),
 								manager = document.getElementById("manager");
+								
 					server.addEventListener("mouseover", () => {
 					  document.getElementById("s-p").style.display = "block";
 					});
@@ -101,6 +102,7 @@
 					  document.getElementById("m-p").style.display = "none";
 					});
 				</script>
+				<!--Start career-info-->
 				<div id="career-info" class="row">
 				<div style="display: none" id="s-p" class="col-sm-2 col-sm-offset-1">
 				<h3>Server</h3>
@@ -148,96 +150,19 @@
 						</ul>
 				</div>
 				</div>
-				<!--<div id="career-list" style="font-size: 16px;">
-				  <p class="info-div">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus.</p>
-					<br/>
-					<div class="row">
-					<div class="col-sm-4"></div>
-				  <div id="server" class="col-sm-3">
-					  <h3>Server</h3>
-						<p>Requirements:</p>
-						<ul>
-						  <li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-						</ul>
-					</div>
-					<br/>
-					<div id="busser" class="col-sm-3">
-					  <h3>Busser</h3>
-						<p>Requirements:</p>
-						<ul>
-						  <li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-						</ul>
-					</div>
-					</div>
-					<div class="row">
-					<div class="col-sm-4"></div>
-					<div id="dishwasher" class="col-sm-3">
-					  <h3>Dishwasher</h3>
-						<p>Requirements:</p>
-						<ul>
-						  <li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-						</ul>
-					</div>
-					<br/>
-					<div id="chef" class="col-sm-3">
-					  <h3>Chef</h3>
-						<p>Requirements:</p>
-						<ul>
-						  <li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-						</ul>
-					</div>
-					</div>
-					<div class="row">
-					<div class="col-sm-5"></div>
-					<div id="manager" class="col-sm-4">
-					  <h3>Manager</h3>
-						<p>Requirements:</p>
-						<ul>
-						  <li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-							<li>Lorem ipsum</li>
-						</ul>
-					</div>
-					</div>
+				<!--End career-info-->
+				<div id="career-photos" class="row">
+				  <div style="col-sm-2 col-sm-offset-1">
+				  </div>
+				  <div style="col-sm-2">
+				  </div>
+				  <div style="col-sm-2">
+				  </div>
+				  <div style="col-sm-2">
+				  </div>
+				  <div style="col-sm-2">
+				  </div>
 				</div>
-			</section>
-		</main>
-	  	<br/><br/>
-	 	<aside>
-			<p style="text-align: center"><em>1(800) 555-1234</em></p>
-			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
-	        </aside>
-	  	<br/>
-		<footer id="footer" class="container-fluid">
-			<br/>
-			<div class="row">
-				<div class="col-sm-3">
-					<a href="index.html">
-						<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="160px" style="padding: 10px"/>
-					</a>
-				</div>
-				<div class="col-sm-6" style="text-align: center">
-					<p style="margin-top: 50px">
-						<a href="about.html" class="link"> About</a> | 
-						<a href="menu.html" class="link"> Menu</a> | 
-						<a href="catering.html" class="link"> Catering</a> | 
-						<a href="login.html" class="link"> Login</a> | 
-						<a href="signup.html" class="link"> Sign-Up</a> |
-						<a href="sitemap.html" class="link"> Sitemap</a>
-					</p>
-				</div>
-				<div class="col-sm-3">
-					<p style="margin-top: 50px">For Educational Purposes Only</p>
-				</div>
-			</div>-->
 		</footer>
 	</div>
 </body>
