Add photos to careers.html

--- a/careers.html
+++ b/careers.html
@@ -60,6 +60,11 @@
 					<a id="manager" href="#" class="link link-button btn btn-default btn-lg col-sm-2">Manager</a>
 				</div>
 				<br/>
+				<script src="jquery-3.5.1.min.js">
+				  $(document).ready(function() {
+					  
+					});
+				</script>
 				<script>
 				  const server = document.getElementById("server"),
 								busser = document.getElementById("busser"),
@@ -152,17 +157,41 @@
 				</div>
 				<!--End career-info-->
 				<div id="career-photos" class="row">
-				  <div style="col-sm-2 col-sm-offset-1">
-				  </div>
-				  <div style="col-sm-2">
-				  </div>
-				  <div style="col-sm-2">
-				  </div>
-				  <div style="col-sm-2">
-				  </div>
-				  <div style="col-sm-2">
-				  </div>
+				  <img class="img-responsive col-sm-2 col-sm-offset-1" width="30px" src="images/waiter.jpg" alt="waiter"/>
+					<img class="img-responsive col-sm-2" src="images/busser.jpg" alt="busser"/>
+					<img class="img-responsive col-sm-2" src="images/dishwasher.jpg" alt="dishwasher"/>
+					<img class="img-responsive col-sm-2" src="images/chef.jpg" alt="chef"/>
+					<img class="img-responsive col-sm-2" src="images/manager.jpg" alt="manager"/>
 				</div>
+				</main>
+	  	<br/>
+	  	<aside>
+			<p style="text-align: center"><em>1(800) 555-1234</em></p>
+			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
+	        </aside>
+	  	<br/>
+		<footer id="footer" class="container-fluid">
+			<br/>
+			<div class="row">
+				<div class="col-sm-3">
+					<a href="index.html">
+						<img class="img-responsive" src="images/SizzleLogoV9.png" alt="Sizzle Logo" width="160px" style="padding: 10px"/>
+					</a>
+				</div>
+				<div class="col-sm-6" style="text-align: center">
+					<p style="margin-top: 50px">
+						<a href="about.html" class="link"> About</a> | 
+						<a href="menu.html" class="link"> Menu</a> | 
+						<a href="catering.html" class="link"> Catering</a> | 
+						<a href="login.html" class="link"> Login</a> | 
+						<a href="signup.html" class="link"> Sign-Up</a> |
+						<a href="sitemap.html" class="link"> Sitemap</a>
+					</p>
+				</div>
+				<div class="col-sm-3">
+					<p style="margin-top: 50px">For Educational Purposes Only</p>
+				</div>
+			</div>
 		</footer>
 	</div>
 </body>
