--- a/careers.html
+++ b/careers.html
@@ -18,6 +18,51 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<!--JQuery Stuff-->
+				<script>
+				  $(document).ready(function() {
+					  /*Server*/
+					  $("#server").hover(function() {
+						  $("#waiter-photo").hide();
+							$("#s-p").show();
+						}, function() {
+						  $("#s-p").hide();
+							$("#waiter-photo").show();
+						});
+						/*Busser*/
+						$("#busser").hover(function() {
+						  $("#busser-photo").hide();
+							$("#b-p").show();
+						}, function() {
+						  $("#b-p").hide();
+							$("#busser-photo").show();
+						});
+						/*Dishwasher*/
+						$("#dishwasher").hover(function() {
+						  $("#dishwasher-photo").hide();
+							$("#d-p").show();
+						}, function() {
+						  $("#d-p").hide();
+							$("#dishwasher-photo").show();
+						});
+						/*Chef*/
+						$("#chef").hover(function() {
+						  $("#chef-photo").hide();
+							$("#c-p").show();
+						}, function() {
+						  $("#c-p").hide();
+							$("#chef-photo").show();
+						});
+						/*Manager*/
+						$("#manager").hover(function() {
+						  $("#manager-photo").hide();
+							$("#m-p").show();
+						}, function() {
+						  $("#m-p").hide();
+							$("#manager-photo").show();
+						});
+					});
+				</script>
 </head>
 <body>
   <div id="wrapper">
@@ -60,12 +105,7 @@
 					<a id="manager" href="#" class="link link-button btn btn-default btn-lg col-sm-2">Manager</a>
 				</div>
 				<br/>
-				<script src="jquery-3.5.1.min.js">
-				  $(document).ready(function() {
-					  
-					});
-				</script>
-				<script>
+				<!--<script>
 				  const server = document.getElementById("server"),
 								busser = document.getElementById("busser"),
 								dishwasher = document.getElementById("dishwasher"),
@@ -106,19 +146,19 @@
 					manager.addEventListener("mouseout", () => {
 					  document.getElementById("m-p").style.display = "none";
 					});
-				</script>
+				</script>-->
 				<!--Start career-info-->
 				<div id="career-info" class="row">
-				<div style="display: none" id="s-p" class="col-sm-2 col-sm-offset-1">
-				<h3>Server</h3>
+				<!--<div style="display: none" id="s-p" class="col-sm-2 col-sm-offset-1">
+				<!--<h3>Server</h3>
 						<p>Requirements:</p>
 						<ul>
 						  <li>Lorem ipsum</li>
 							<li>Lorem ipsum</li>
 							<li>Lorem ipsum</li>
 						</ul>
-				</div>
-				<div style="display: none" id="b-p" class="col-sm-2 col-sm-offset-3">
+				</div>-->
+				<!--<div style="display: none" id="b-p" class="col-sm-2 col-sm-offset-3">
 				<h3>Busser</h3>
 						<p>Requirements:</p>
 						<ul>
@@ -154,15 +194,72 @@
 							<li>Lorem ipsum</li>
 						</ul>
 				</div>
-				</div>
+				</div>-->
 				<!--End career-info-->
+				<!--Start Career Info and Photos-->
 				<div id="career-photos" class="row">
-				  <img class="img-responsive col-sm-2 col-sm-offset-1" width="30px" src="images/waiter.jpg" alt="waiter"/>
-					<img class="img-responsive col-sm-2" src="images/busser.jpg" alt="busser"/>
-					<img class="img-responsive col-sm-2" src="images/dishwasher.jpg" alt="dishwasher"/>
-					<img class="img-responsive col-sm-2" src="images/chef.jpg" alt="chef"/>
-					<img class="img-responsive col-sm-2" src="images/manager.jpg" alt="manager"/>
+				  <div>
+				    <img id="waiter-photo" class="img-responsive col-sm-2 col-sm-offset-1" width="30px" src="images/waiter.jpg" alt="waiter"/>
+						<div style="display: none" id="s-p" class="col-sm-2 col-sm-offset-1">
+							<h3>Server</h3>
+						  <p>Requirements:</p>
+						  <ul>
+						    <li>Lorem ipsum</li>
+							  <li>Lorem ipsum</li>
+							  <li>Lorem ipsum</li>
+						  </ul>
+				    </div>
+					</div>
+					<div>
+					  <img id="busser-photo" class="img-responsive col-sm-2" src="images/busser.jpg" alt="busser"/>
+						<div style="display: none" id="b-p" class="col-sm-2">
+				      <h3>Busser</h3>
+						  <p>Requirements:</p>
+						    <ul>
+						    <li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+							</ul>
+						</div>
+					</div>
+					<div>
+					  <img id="dishwasher-photo" class="img-responsive col-sm-2" src="images/dishwasher.jpg" alt="dishwasher"/>
+						<div style="display: none" id="d-p" class="col-sm-2">
+							<h3>Dishwasher</h3>
+							<p>Requirements:</p>
+							<ul>
+								<li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+							</ul>
+						</div>
+					</div>
+					<div>
+					  <img id="chef-photo" class="img-responsive col-sm-2" src="images/chef.jpg" alt="chef"/>
+						<div style="display: none" id="c-p" class="col-sm-2">
+							<h3>Chef</h3>
+							<p>Requirements:</p>
+							<ul>
+								<li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+							</ul>
+						</div>
+					</div>
+					<div>
+					  <img id="manager-photo" class="img-responsive col-sm-2" src="images/manager.jpg" alt="manager"/>
+						<div style="display: none" id="m-p" class="col-sm-2">
+							<h3>Manager</h3>
+							<p>Requirements:</p>
+							<ul>
+								<li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+								<li>Lorem ipsum</li>
+							</ul>
+						</div>
+					</div>
 				</div>
+				<!--End Career Info and Photos-->
 				</main>
 	  	<br/>
 	  	<aside>
