--- a/menu.html
+++ b/menu.html
@@ -42,13 +42,22 @@
 			</nav>
 		</header>
 		<main style="margin-bottom: 15vh;">
-	        </main>
-	  	<br/>
-	  	<aside>
+		  <section class="page-section">
+				<div class="title-words">
+			    <h1>Menu</h1>
+				  <br/>
+			  </div>
+				<div class="info-div">
+				
+				</div>
+			</section>
+	  </main>
+	  <br/>
+	  <aside>
 			<p style="text-align: center"><em>1(800) 555-1234</em></p>
 			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
-	        </aside>
-	  	<br/>
+	  </aside>
+	  <br/>
 		<footer id="footer" class="container-fluid">
 			<br/>
 			<div class="row">
