Work on content for menu.html

--- a/menu.html
+++ b/menu.html
@@ -63,16 +63,20 @@
 				  <a id="order" href="javascript:void(0)" class="link link-button btn btn-default btn-lg col-sm-8 col-sm-offset-2">Order</a>
 				</div>
 				<br/>
+				<!--Start Menu Stuff-->
 				<div class="info-div">
 				  <div id="food-pics" class="row">
 					  <div id="waffles">
-						  <p>waffle</p>
+						  <img class="img-responsive col-sm-2" src="images/waffles.jpg" alt="waffles"/>
+							<!--https://www.pexels.com/photo/berries-breakfast-delicious-food-374092/-->
 						</div>
 						<div id="pancakes">
-						  <p>pancakes</p>
+						  <img class="img-responsive col-sm-2" src="images/pancakes.jpg" alt="pancakes"/>
+							<!--https://www.pexels.com/photo/stack-of-pancakes-with-strawberry-fruits-2280545/-->
 						</div>
-						<div id="breakfast-burritos">
-						  <p>burritos</p>
+						<div id="french-toast">
+						  <img class="img-responsive col-sm-2" src="images/french-toast.jpg" alt="french toast"/>
+							<!--https://unsplash.com/photos/1FQx2-YtV1A-->
 						</div>
 						<div id="sides">
 						  <p>sides</p>
@@ -82,9 +86,17 @@
 						</div>
 					</div>
 				</div>
+				<!--End Menu Stuff-->
 			</section>
-			<section id="order-tab" style="display: none; margin-bottom: 1000px" class="page-section">
-			  <p>hi</p>
+			<section id="order-tab" class="page-section" style="display: none; margin-bottom: 1000px" class="page-section">
+			  <table class="table table-condensed table-hover active">
+				  <thead class="row">
+					  <tr>
+					    <th class="col-sm-3 col-sm-offset-1">Item</th>
+						  <th class="col-sm-3">Price</th>
+					  </tr>
+					</thead>
+				</table>
 			</section>
 	  </main>
 	  <br/>
