Work on menu.html

--- a/menu.html
+++ b/menu.html
@@ -23,10 +23,20 @@
 		$(document).ready(function(){
 		  $("#order").click(
 			  function() {
-				  $("#order-tab").show();
-					$("#menu-content").addClass("col-sm-8");
-					$("#order-tab").addClass("col-sm-4");
+				  $("#order-tab").toggle();
+					$("#menu-content").toggleClass("col-sm-8");
+					$("#order-tab").toggleClass("col-sm-4");
+					var text = $("#order-button").text();
+					$("#order-button").text(
+					  text == "Order" ? "Remove Order" : "Order"
+					);
 				}
+				/*, function() {
+				  $("#order-tab").hide();
+					$("#menu-content").removeClass("col-sm-8");
+					$("#order-tab").removeClass("col-sm-4");
+					$("#order-button").text("Order");
+				}*/
 			);
 		});
 	</script>
@@ -60,42 +70,50 @@
 				  <br/>
 			  </div>
 				<div id="order" class="row">
-				  <a id="order" href="javascript:void(0)" class="link link-button btn btn-default btn-lg col-sm-8 col-sm-offset-2">Order</a>
+				  <a id="order-button" href="javascript:void(0)" class="link link-button btn btn-default btn-lg col-sm-4 col-sm-offset-4">Order</a>
 				</div>
 				<br/>
 				<!--Start Menu Stuff-->
 				<div class="info-div">
 				  <div id="food-pics" class="row">
 					  <div id="waffles">
-						  <img class="img-responsive col-sm-2" src="images/waffles.jpg" alt="waffles"/>
+						  <img class="img-responsive col-sm-2 col-sm-offset-1 thumbnail" src="images/waffles.jpg" alt="waffles"/>
 							<!--https://www.pexels.com/photo/berries-breakfast-delicious-food-374092/-->
 						</div>
 						<div id="pancakes">
-						  <img class="img-responsive col-sm-2" src="images/pancakes.jpg" alt="pancakes"/>
+						  <img class="img-responsive col-sm-2 thumbnail" src="images/pancakes.jpg" alt="pancakes"/>
 							<!--https://www.pexels.com/photo/stack-of-pancakes-with-strawberry-fruits-2280545/-->
 						</div>
 						<div id="french-toast">
-						  <img class="img-responsive col-sm-2" src="images/french-toast.jpg" alt="french toast"/>
+						  <img class="img-responsive col-sm-2 thumbnail" src="images/french-toast.jpg" alt="french toast"/>
 							<!--https://unsplash.com/photos/1FQx2-YtV1A-->
 						</div>
 						<div id="sides">
-						  <p>sides</p>
+						  <img class="img-responsive col-sm-2 thumbnail" src="images/fruit.jpg" alt="sides"/>
+							<!--https://www.pexels.com/photo/blueberries-and-strawberries-in-white-ceramic-bowl-1120575/-->
 						</div>
 						<div id="drinks">
-						  <p>drinks</p>
+						  <img class="img-responsive col-sm-2 thumbnail" src="images/coffee.jpg" alt="drinks"/>
+							<!--https://www.pexels.com/photo/red-ceramic-mug-on-red-saucer-1187317/-->
 						</div>
 					</div>
 				</div>
 				<!--End Menu Stuff-->
 			</section>
-			<section id="order-tab" class="page-section" style="display: none; margin-bottom: 1000px" class="page-section">
-			  <table class="table table-condensed table-hover active">
+			<!--Remember to remove the margin-bottom property-->
+			<section id="order-tab" class="page-section" style="display: none; margin-bottom: 1000px;" class="page-section">
+			  <table class="table table-condensed table-hover active" style="margin-top: 25px;">
 				  <thead class="row">
 					  <tr>
 					    <th class="col-sm-3 col-sm-offset-1">Item</th>
 						  <th class="col-sm-3">Price</th>
 					  </tr>
 					</thead>
+					<tfoot>
+					  <tr>
+						  <th class="col-sm-3 col-sm-offset-1">Total:</th>
+						</tr>
+					</tfoot>
 				</table>
 			</section>
 	  </main>
