Redo about.html

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
 				<br/>
 			</div>
 			<div class="info-div">
-			  <p>We hail from the wonderful state of Blucenburg. Our founder, Mr. Woodrozinkenstoffh, created Sizzle in 1968. While at first it was but a humble 5-star, million-dollar restaurant, under the wise management of Mr Woodrozinkenstoffh, it became the amazing 4-star, average-income diner that it is to-day. </p>
-				<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. -Jrexroth Z. Woodrozinkenstoffh</blockquote>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. Aenean in accumsan mauris, at iaculis purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean eleifend dapibus lorem non sagittis.</p>
+				<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. -Someone</blockquote>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed tellus sed diam rutrum laoreet nec eu libero. Vestibulum vitae ante tincidunt, faucibus est in, fermentum metus. Aenean in accumsan mauris, at iaculis purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean eleifend dapibus lorem non sagittis. Sed a sem condimentum, bibendum nulla et, porta odio. Nam ac dolor aliquam nisl cursus congue. Nunc sed porttitor odio, quis hendrerit magna. Proin dapibus purus id euismod auctor.</p>
 			</div>
 			</section>
