Fix minor issues

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 						<li><a href="menu.html">Menu</a></li>
 					</ul>
 				  <ul class="nav navbar-nav navbar-right">
-						<li><a href="es/index.html">Espa&#241;ol</a></li>
 						<li><a href="signup.html">Sign-Up</a></li>
 					</ul>
 				</div>
@@ -54,11 +53,11 @@
 					</span>
 				<div id="order-instructions" class="row">
 				  <div class="col-sm-4 instruction-panel">
-						<h4 style={{textDecoration: "underline"}}>Step 1</h4>
+						<h4 style="text-decoration: underline;">Step 1</h4>
 						<p>Pick out your favorite foods <a href="#" target="_blank" class="link">here</a></p>
 					</div>
 					<div class="col-sm-4 instruction-panel">
-						<h4 style={{textDecoration: "underline"}}>Step 2</h4>
+						<h4 style="text-decoration: underline;">Step 2</h4>
 						<p>Wait as we deliver your meal right to you</p>
 					</div>
 					<div class="col-sm-4 instruction-panel">
@@ -105,8 +104,6 @@
 					<p style="margin-top: 50px">
 						<a href="about.html" class="link"> About</a> | 
 						<a href="menu.html" class="link"> Menu</a> | 
-						<a href="catering.html" class="link"> Catering</a> | 
-						<a href="login.html" class="link"> Login</a> | 
 						<a href="signup.html" class="link"> Sign-Up</a> |
 						<a href="sitemap.html" class="link"> Sitemap</a>
 					</p>
