--- a/sitemap.html
+++ b/sitemap.html
@@ -34,7 +34,6 @@
 						<li><a href="menu.html">Menu</a></li>
 					</ul>
 				  <ul class="nav navbar-nav navbar-right">
-						<li><a href="es/sitemap.html">Espa&#241;ol</a></li>
 						<li><a href="signup.html">Sign-Up</a></li>
 					</ul>
 				</div>
@@ -50,7 +49,10 @@
 				<div class="info-div">
 					<div class="row">
 						<div class="col-sm-3 col-sm-offset-2">
-						 
+						  <h3><a href="index.html" class="link">Home</a></h3>
+							<ul>
+							  <li><h4><a href="about.html" class="link">About</a></h4></li>
+							</ul>
 						</div>
 						<div class="col-sm-3">
 						</div>
@@ -76,8 +78,6 @@
 					<p style="margin-top: 50px">
 						<a href="about.html" class="link"> About</a> | 
 						<a href="menu.html" class="link"> Menu</a> | 
-						<a href="catering.html" class="link"> Catering</a> | 
-						<a href="login.html" class="link"> Login</a> | 
 						<a href="signup.html" class="link"> Sign-Up</a> |
 						<a href="sitemap.html" class="link"> Sitemap</a>
 					</p>
