Fix bug in menu.html

--- a/menu.html
+++ b/menu.html
@@ -240,7 +240,7 @@
 				</div>
 			</nav>
 		</header>
-		<main style="margin-bottom: 15vh;" class="row">
+		<main style="margin-bottom: 12vh;" class="row">
 		  <section id="menu-content" class="page-section">
 				<div class="title-words">
 			    <h1>Menu</h1>
@@ -403,8 +403,7 @@
 
 			</section>
 	  </main>
-	  <br/>
-	  <aside class="">
+	  <aside>
 			<p style="text-align: center"><em>1(800) 555-1234</em></p>
 			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
 	  </aside>
