--- a/survey.html
+++ b/survey.html
@@ -47,7 +47,7 @@
 			<address style="text-align: center">8452 Ledner Mount, Keithside, BL</address>
 	        </aside>
 	  	<br/>
-		<footer id="footer" class="container-fluid">
+		<footer id="footer" class="container-fluid navbar-fixed-bottom">
 			<br/>
 			<div class="row">
 				<div class="col-sm-3">
